# AutoCRM

./: .gitignore  AGENTS.md  README.md  go.mod  pyproject.toml  test.ipynb
.github/workflows/: release.yml
autocrm/: README.md  __init__.py  common.py  main.py  models.py  notion.py  notion_sync.py  outbox.py
autocrm/collectors/: __init__.py  beeper.py  collector.py  imessage.py  imessage_db.py  phone.py
cmd/autocrm/: doctor.go  install.go  launchd.go  main.go  uninstall.go
internal/: README.md
internal/collectors/: beeper.go  collector.go  imessage.go  imessage_db.go  imessage_db_test.go  imessage_test.go  phone.go  phone_db.go  phone_db_test.go  phone_test.go
internal/common/: common.go  common_test.go
internal/notion/: notion.go  notion_test.go
internal/outbox/: outbox.go  outbox_test.go
internal/testfixtures/: callhistorydb.go  chatdb.go
launchd/: com.user.autocrm.plist  com.user.autocrm.plist.example
scripts/: e2e_verify.sh  import_imessage_notion.py  mac_call_history_dump.py  package_release.sh  table_mod.sh
tests/: conftest.py  test_imessage_bootstrap.py  test_imessage_collector.py  test_imessage_db.py  test_import_vcf.py  test_notion.py  test_outbox_batch.py
tests/fixtures/: build_chat_db.py
